# fftp

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  build.sh  common.h  ff.c  ffd.c  proto.h  proto.md  setup_sodium.sh
etc/rc.d/: ffd
src/: client.c  common.h  ff.c  ff.rs  ffd.c  ffd.rs  lib.rs  proto.rs  server.c
