[package]
name = "ff"
description = "In-network file transfer."
version = "0.1.0"
authors = ["krashanoff <leo@krashanoff.com>"]
edition = "2018"

[[bin]]
name = "ffd"
path = "src/ffd.rs"

[[bin]]
name = "ff"
path = "src/ff.rs"

[dependencies]
bincode = "1.3"
fork = "0.1"
igd = { version = "0.12", features = ["aio", "tokio"] }
clap = { version = "2.33", default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util", "fs", "net", "sync"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
